--- a/package.json
+++ b/package.json
@@ -4,25 +4,20 @@
   "version": "0.0.0",
   "author": "Benjamin Mosior <bemosior@gmail.com>",
   "license": "MIT",
-
   "keywords": "pni, narrative, story",
-
   "repository": {
     "type": "git",
     "url": "git://github.com/hubot-scripts/hubot-pni.git"
   },
-
   "bugs": {
     "url": "https://github.com/hubot-scripts/hubot-pni/issues"
   },
-
   "dependencies": {
+    "hubot-conversation": "^1.1.1"
   },
-
   "peerDependencies": {
     "hubot": "2.x"
   },
-
   "devDependencies": {
     "hubot-test-helper": "^1.3.0",
     "chai": "^2.1.1",
@@ -38,9 +33,7 @@
     "sinon": "^1.13.0",
     "sinon-chai": "^2.7.0"
   },
-
   "main": "index.coffee",
-
   "scripts": {
     "test": "grunt test"
   }
